--- a/src/Components/Css/AcivePositions.css
+++ b/src/Components/Css/AcivePositions.css
@@ -66,8 +66,8 @@
     overflow: hidden;
     height: 100%;
     width: 100%;
-    background-color: white;
-
+    box-sizing: border-box;
+    padding: 10px 0;
 }
 
 .splide__slide{
