--- a/src/Components/Css/Header.css
+++ b/src/Components/Css/Header.css
@@ -253,3 +253,8 @@ a {
     background-color: #ffffff3b;
     border-radius: 36px;
 }
+
+.ActivePill{
+    border-radius: 36px;
+    background-color: rgba(255, 255, 255, 0.242);
+}
