--- a/src/Components/Css/ListOfOrdersHistory.css
+++ b/src/Components/Css/ListOfOrdersHistory.css
@@ -3,7 +3,8 @@
     width: 90%;
     min-height: 70px;
     background-color: #ffffff;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     padding: 0 40px;
     display: flex;
     flex-direction: row;
@@ -27,6 +28,8 @@
     width: 100px;
     background-color: black;
     border-radius: 10px;
+    box-sizing: border-box;
+    padding: 10px 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -34,4 +37,24 @@
 .OrderHistoryCardDiv2>p{
     margin: 0 0;
     text-align: center;
+}
+
+.ActiveOrderSellButton{
+    box-sizing: border-box;
+    padding: 0 40px;
+    width: 90%;
+    padding: 10px 10px;
+    display: flex;
+    align-items: center;
+    font-size: medium;
+    background-color: red;
+    justify-content: space-around;
+}
+
+.Orderards{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
 }
