--- a/src/Components/Css/Profile.css
+++ b/src/Components/Css/Profile.css
@@ -119,3 +119,70 @@
     overflow-y: scroll;
     align-items: center;
 }
+
+.settingsDiv{
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    background-color: transparent;
+    padding: 10px 20px;
+}
+
+.SettingsCard{
+    box-sizing: border-box;
+    width: 100%;
+    height: 100px;
+    background-color: rgba(245, 245, 245, 0.053);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+.SettingsCard>button{
+    height: 50%;
+    padding: 0 20px;
+    background-color: transparent;
+    border: 1px solid white;
+    outline:  none;
+    border-radius: 20px;
+    font-size: x-large;
+}
+
+.SettingsCard>button:hover{
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+}
+
+.alert{
+    position: absolute;
+    background-color: rgba(130, 130, 130, 0.348);
+    bottom: 30px;
+    right: 30px;
+    color:white;
+    font-weight: 600;
+    padding: 10px 20px;
+    display: none;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 20px;
+    transition: all 2s;
+}
+
+.alert>button{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: white;
+    font-weight: 600;
+    font-size: x-large;
+    cursor: pointer;
+}
+
+@keyframes display {
+    100%{
+        display: none !important;
+    }
+}
